chore: upgrade to Java 21 (#86)
Closes: FHIQC-40